# nuitka_bug

./: compile.sh  pyproject.toml
.github/workflows/: ci.yml
nuitka_async_iterator_bug/: main.py
nuitka_bug/: main.py
nuitka_compile_dynamic_import_bug/: main.py
nuitka_compile_dynamic_import_bug/custom_package/: mod.py
nuitka_compile_traversable_bug/: main.py
scripts/: post_build.py
