[tool.poetry]
name = "nuitka-bug"
version = "0.1.0"
description = ""
authors = ["Vladyslav Hnatiuk <aders1234@gmail.com>"]
readme = "README.md"
packages = [{include = "nuitka_bug"}]

[tool.poetry.dependencies]
python = "^3.12"
Nuitka = "2.3.10"
libcst = "^1.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
