[tool.poetry]
name = "nuitka-bug"
version = "0.1.0"
description = ""
authors = ["Vladyslav Hnatiuk <aders1234@gmail.com>"]
readme = "README.md"
packages = [{include = "nuitka_bug"}]

[tool.poetry.dependencies]
python = "^3.11"
Nuitka = "2.6.2"
mypy = "^1.14.1"

[tool.poetry.group.dev.dependencies]
setuptools = "^75.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
